Jupyter notebook for assignment25

--- a/assignment25_gan.ipynb
+++ b/assignment25_gan.ipynb
@@ -6,6 +6,11 @@
    "source": [
     "## Assignment 25 : Training Indian Car Images with GAN\n",
     "\n",
+    "## Contributed by:\n",
+    "* Monimoy Deb Purkayastha\n",
+    "* Chaitali Deb Purkayastha\n",
+    "* Sudhakar Reddy\n",
+    "\n",
     "In this assignment we have used DCGAN to train 1000 Indian Car Images. Indian Car Images are collected from internet and resized to 100x100 using https://bulkresizephotos.com/en\n",
     "\n",
     "Base code is taken from https://github.com/eriklindernoren/Keras-GAN\n",
